# ThermoWave

./: .gitignore  Generator Torque.gen  LICENSE  LM6000-class HPC.cop  LM6000-class HPT.tur  LM6000-class LPC.cop  LM6000-class LPT.tur  README.md  T100 Comp.cop  T100 Turb.tur  generate_lm6000_class_maps.py  pyproject.toml
examples/: 01_ideal_gas_fluid.py  02_real_fluid_coolprop.py  03_settings_units.py  04_source_component.py  05_sink_component.py  06_pipe_component.py  07_valve_component.py  08_network_solve.py  09_simple_compressor_component.py  10_compressor_component.py  11_simple_turbine_component.py  12_turbine_component.py  13_junction_splitter_merger.py  14_compressor_all_cases.py  15_turbine_all_cases.py  16_simple_heat_exchanger_component.py  17_sensor_controller.py  18_shaft_coupling.py  19_generator_component.py  20_combustor_component.py  21_pid_controller.py  22_fluid_mixtures_and_combustion_products.py  23_advanced_plotting.py  24_heat_transfer_network.py  25_combined_cycle_showcase.py  26_twin_spool_combined_cycle.py  27_t100_validation_showcase.py
tests/: conftest.py  test_characteristic_map.py  test_check_valve.py  test_combustor.py  test_components.py  test_compressor.py  test_condenser.py  test_coolprop_saturation.py  test_drum.py  test_electric_motor.py  test_evaporator.py  test_exceptions.py  test_fluid_propagation.py  test_fluids.py  test_generator.py  test_heat_transfer.py  test_heat_transfer_integration.py  test_junction.py  test_junction_fluid_mixing.py  test_multi_pass_heat_exchanger.py  test_network.py  test_network_e2e.py  test_nozzle.py  (+19 more)
(+80 files in other folders)
