[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermowave"
version = "0.2.2"
description = "A headless, 1D implicit thermodynamic network solver for steady-state thermal-fluid systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["thermodynamics", "fluid-dynamics", "solver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
]

[project.optional-dependencies]
coolprop = ["CoolProp>=6.4"]
cantera = ["cantera>=3.0"]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1", "mypy>=1.5"]
full = ["thermowave[coolprop,cantera,plot,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
